Fix margin on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -143,8 +143,10 @@
   }
 
   .responsive-widths {
+    font-size: 15px;
+    margin-top:65px;
+    padding: 10px;
     width:100%;
-    margin: 0 auto;
   }
   .chilean-fire {
     color: #cd6133;
@@ -245,6 +247,9 @@
 
   #menu-wrap {
     display: none;
+  }
+  .responsive-widths {
+    margin-top:0;
   }
 }
  
