--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,5 @@
 main {
+  margin-top: 60px;
   padding: 10px
 }
 
@@ -215,6 +216,9 @@ main {
 }
 
 @media (min-width: 992px) {
+  main {
+    margin-top: 0;
+  }
   #bannerSection h2 {
     font-size: 5em;
   }
