--- a/static/css/tourpackage.css
+++ b/static/css/tourpackage.css
@@ -1,4 +1,5 @@
 main {
+  margin-top: 60px;
   padding: 12px;
   animation-name: tourpackage;
   animation-duration: 2s;
@@ -122,6 +123,9 @@ aside ul {
 /* Large devices (desktops, 992px and up) */
 
 @media (min-width: 992px) {
+  main {
+    margin-top: 0;
+  }
   header {
     grid-area: header;
   }
